feat(packages): build config

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "apps/*"
   ],
   "scripts": {
-    "build:libs": "npx nx run-many --target=build:libs --projects=\"@universal-labs/**\"",
+    "build:libs": "npx nx run-many --target=build:libs",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "dev": "npx nx run-many --target=dev --projects=\"@universal-labs/**\" --parallel",
+    "dev": "npx nx run-many --target=dev --parallel",
     "docs:build": "npx nx run build --project=docusaurus",
     "docs:dev": "npx nx run dev --project=docusaurus",
     "expo:android": "yarn workspace expo-app run android",
@@ -30,13 +30,16 @@
     "test:e2e": "npx nx run-many --target=e2e --projects=\"@universal-labs/**\"",
     "web": "npx nx dev start --project=next-app"
   },
+  "resolutions": {
+    "@nrwl/vite@15.9.2": "patch:@nrwl/vite@npm%3A15.9.2#./.yarn/patches/@nrwl-vite-npm-15.9.2-19e7682c3d.patch"
+  },
   "dependencies": {
     "@types/node": "16.11.7",
     "@types/postcss-js": "^4.0.0",
     "@types/react-test-renderer": "^18.0.0",
     "@types/tailwindcss": "3.1.0",
     "happy-dom": "latest",
-    "jsdom": "latest",
+    "jsdom": "~20.0.3",
     "postcss": "8.4.21",
     "postcss-color-rgb": "^2.0.0",
     "postcss-js": "^4.0.0",
@@ -47,14 +50,19 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@nrwl/devkit": "15.8.7",
-    "@nrwl/eslint-plugin-nx": "15.8.7",
-    "@nrwl/linter": "15.8.7",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/cli": "15.9.2",
+    "@nrwl/devkit": "15.9.2",
+    "@nrwl/eslint-plugin-nx": "15.9.2",
+    "@nrwl/js": "15.9.2",
+    "@nrwl/linter": "15.9.2",
+    "@nrwl/nx-cloud": "15.3.5",
+    "@nrwl/vite": "15.9.2",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitejs/plugin-react": "^3.0.0",
     "@vitejs/plugin-react-swc": "^3.2.0",
+    "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.28.3",
     "concurrently": "^7.6.0",
     "eslint": "~8.15.0",
@@ -66,13 +74,15 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-module-scripts": "^3.0.7",
-    "nx": "15.8.7",
+    "nx": "15.9.2",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tslib": "^2.3.0",
-    "typescript": "^4.9.4",
+    "typescript": "~4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-dts": "^2.2.0",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.28.3"
   },
   "packageManager": "yarn@3.4.1"
