--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -24,9 +24,9 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./build/umd/index.js",
-  "module": "./build/es/index.js",
-  "types": "./build/typings/index.d.ts",
+  "main": "./build/index.es",
+  "module": "./build/index.umd",
+  "types": "./build/index.d.ts",
   "files": [
     "build",
     "env.d.ts",
@@ -35,9 +35,7 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "vite build",
     "clean": "expo-module clean",
-    "dev": "vite build -w",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "vitest run -c vite.config.web.ts",
     "test:ui": "yarn vitest --ui"
@@ -56,6 +54,5 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./build/es/index.native.js"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
