--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -33,8 +33,8 @@
       "types": "./react-native/index.d.ts"
     }
   },
-  "main": "./build/index.umd",
-  "module": "./build/index.es",
+  "main": "./build/index.umd.js",
+  "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
   "files": [
     "build",
@@ -45,9 +45,7 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "vite build",
     "clean": "expo-module clean",
-    "dev": "vite build -w",
     "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepublishOnly": "expo-module prepublishOnly",
