--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -32,12 +32,8 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "vite build",
     "clean": "expo-module clean",
-    "dev": "vite build -w",
-    "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "prepublishOnly": "expo-module prepublishOnly",
     "test": "vitest run",
     "test:native": "vitest run",
     "test:ui": "vitest --ui"
@@ -65,6 +61,5 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./build/es/index.native.js"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
