--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -47,7 +47,7 @@
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "^0.71.5",
     "@universal-labs/styled": "workspace:*",
-    "react-native": "0.71.4"
+    "react-native": "^0.71.6"
   },
   "peerDependencies": {
     "react-native-web": ">= 0.18.10"
