--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "@vitest/ui": "^0.28.3",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "concurrently": "^7.6.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
