feat(packages): component groups (#67)
* feat(packages): component groups

* feat(styles): support for styles for groups added

* feat(styles): child styles re-renders

* feat(styles): child styles re-renders

* feat(styles): child styles re-renders

* feat(styles): child styles re-renders fix tests

* feat(styles): child styles re-renders fix tests

* feat(styles): child styles re-renders fix tests

--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -22,9 +22,15 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./build/umd/index.web.js",
-  "module": "./build/es/index.web.js",
-  "typings": "./build/typings/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./build/index.umd",
+      "import": "./build/index.es"
+    }
+  },
+  "main": "./build/index.umd",
+  "module": "./build/index.es",
+  "types": "./build/index.d.ts",
   "files": [
     "build",
     "LICENSE",
@@ -34,7 +40,7 @@
   "scripts": {
     "build:libs": "vite build",
     "clean": "expo-module clean",
-    "dev": "yarn build:libs -w",
+    "dev": "vite build -w",
     "expo-module": "expo-module",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepublishOnly": "expo-module prepublishOnly",
@@ -54,7 +60,7 @@
     "@types/react-is": "^17.0.3",
     "@types/react-native": "^0.71.5",
     "react": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "^0.71.6",
     "vite-plugin-multiple": "0.2.0",
     "vitest-react-native": "0.0.5"
   },
@@ -66,5 +72,5 @@
     "directory": "_release/package"
   },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./build/es/index.js"
+  "react-native": "./build/index.es.js"
 }
