--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@universal-labs/stylesheets": "workspace:*",
     "react-is": "^18.2.0",
+    "stable-hash": "0.0.3",
     "tailwind-merge": "^1.10.0"
   },
   "devDependencies": {
