--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -48,6 +48,7 @@
     "css-to-react-native": "^3.1.0",
     "immer": "9.0.21",
     "react-native-uuid": "^2.0.1",
+    "tailwindest": "1.1.0",
     "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
