--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -61,11 +61,11 @@
     "@types/react-is": "^17.0.3",
     "@types/react-native": "^0.71.5",
     "react": "18.2.0",
-    "react-native": "^0.71.6",
     "vite-plugin-multiple": "0.2.0",
     "vitest-react-native": "0.0.5"
   },
   "peerDependencies": {
+    "react-native": ">= 0.70",
     "react-native-web": ">= 0.18.10"
   },
   "publishConfig": {
