--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -73,5 +73,5 @@
     "directory": "_release/package"
   },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./build/index.es.js"
+  "react-native": "./src/index.ts"
 }
