--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -64,5 +64,5 @@
     "directory": "_release/package"
   },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./src/index.ts"
+  "react-native": "./build/index.es.js"
 }
