--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -24,12 +24,12 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "require": "./build/index.umd",
-      "import": "./build/index.es"
+      "require": "./build/index.umd.web.js",
+      "import": "./build/index.es.web.js"
     }
   },
-  "main": "./build/index.umd",
-  "module": "./build/index.es",
+  "main": "./build/index.umd.web.js",
+  "module": "./build/index.es.web.js",
   "types": "./build/index.d.ts",
   "files": [
     "build",
@@ -73,5 +73,5 @@
     "directory": "_release/package"
   },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./src/index.ts"
+  "react-native": "./build/index.es.js"
 }
