feat(styles): fix types

--- a/nx.json
+++ b/nx.json
@@ -24,6 +24,9 @@
   "targetDefaults": {
     "build": {
       "dependsOn": []
+    },
+    "build:libs": {
+      "dependsOn": ["^build:libs"]
     }
   },
   "namedInputs": {
