--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "declarationMap": false,
+    "sourceMap": false,
     "noEmit": true,
     "types": ["node", "vitest/globals"],
     "importHelpers": true
