--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -24,9 +24,9 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./build/umd/index.js",
-  "module": "./build/es/index.js",
-  "types": "./build/typings/index.d.ts",
+  "main": "./build/index.js",
+  "module": "./build/index.js",
+  "types": "./build/index.d.ts",
   "files": [
     "build",
     "env.d.ts",
@@ -35,19 +35,23 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "vite build",
+    "build:libs": "expo-module build",
     "clean": "expo-module clean",
     "dev": "vite build -w",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "vitest run -c vite.config.web.ts",
     "test:ui": "yarn vitest --ui"
   },
+  "dependencies": {
+    "@universal-labs/styled": "workspace:*"
+  },
   "devDependencies": {
-    "@types/react": "~18.0.27",
+    "@types/node": "16.11.7",
+    "@types/react": "18.0.28",
     "@types/react-dom": "~18.0.10",
+    "@types/react-is": "^17.0.3",
     "@types/react-native": "^0.71.5",
-    "@universal-labs/styled": "workspace:*",
-    "react-native": "^0.71.6"
+    "react": "18.2.0"
   },
   "peerDependencies": {
     "react-native-web": ">= 0.18.10"
