--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -24,12 +24,12 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "require": "./build/index.umd.web.js",
-      "import": "./build/index.es.web.js"
+      "require": "./build/index.js",
+      "import": "./build/index.js"
     }
   },
-  "main": "./build/index.umd.web.js",
-  "module": "./build/index.es.web.js",
+  "main": "./build/index.js",
+  "module": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
     "build",
@@ -38,7 +38,7 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "vite build",
+    "build:libs": "expo-module build",
     "clean": "expo-module clean",
     "dev": "vite build -w",
     "expo-module": "expo-module",
@@ -72,6 +72,5 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./build/index.es.js"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
