--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,7 +46,7 @@
   ],
   "scripts": {
     "build:esbuild": "tsx build.ts",
-    "build:libs": "npx vite build && yarn build:tailwind",
+    "build:libs": "npx vite build",
     "build:tailwind": "npx vite build -c vite.tailwind.config.ts",
     "dev": "concurrently \"npx vite build -w\" \"npx vite build -c vite.tailwind.config.ts -w\"",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
