--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -35,7 +35,7 @@
     "README.md"
   ],
   "scripts": {
-    "build:libs": "expo-module build",
+    "build:libs": "expo-module build -p tsconfig.build.json",
     "clean": "expo-module clean",
     "dev": "vite build -w",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
@@ -60,6 +60,5 @@
     "access": "public",
     "directory": "_release/package"
   },
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./build/es/index.native.js"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
