--- a/packages/styled/tsconfig.build.json
+++ b/packages/styled/tsconfig.build.json
@@ -1,12 +1,15 @@
 {
-  "extends": "expo-module-scripts/tsconfig.base",
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "outDir": "./build",
+    "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
-    "jsx": "react-jsx",
-    "types": ["node"]
+    "declarationMap": false,
+    "outDir": "./build",
+    "sourceMap": false,
+    "noEmit": false,
+    "importHelpers": true,
+    "rootDir": "./src"
   },
-  "include": ["./src"],
-  "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*"]
+  "include": ["src"]
 }
