--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -50,18 +50,16 @@
     "build:esbuild": "tsx src/build.ts",
     "build:libs": "npx tsx src/build.ts && yarn build:tailwind",
     "build:tailwind": "npx vite build -c vite.tailwind.config.ts",
-    "dev": "concurrently \"npx tsx src/build.ts\" \"yarn build:tailwind -w\"",
+    "dev": "concurrently \"npx tsx watch src/build.ts\" \"yarn build:tailwind -w\"",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "vitest run",
     "test:ui": "vitest --ui"
   },
-  "dependencies": {
-    "postcss-css-variables": "^0.18.0",
-    "tailwindcss": "^3.2.4"
-  },
   "devDependencies": {
     "@types/postcss-css-variables": "0.18.0",
     "@types/tailwindcss": "3.1.0",
+    "postcss-css-variables": "^0.18.0",
+    "tailwindcss": "^3.2.4",
     "tsx": "3.12.6"
   },
   "publishConfig": {
