--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "noFallthroughCasesInSwitch": true,
-    "allowJs": false,
+    "allowJs": true,
     "noUncheckedIndexedAccess": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
