--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,8 +56,10 @@
     "test:ui": "vitest --ui"
   },
   "devDependencies": {
+    "@types/css-tree": "2.3.1",
     "@types/postcss-css-variables": "0.18.0",
     "@types/tailwindcss": "3.1.0",
+    "css-tree": "2.3.1",
     "postcss-css-variables": "^0.18.0",
     "tailwindcss": "^3.2.4",
     "tsx": "3.12.6"
