--- a/packages/primitives/tsconfig.json
+++ b/packages/primitives/tsconfig.json
@@ -6,7 +6,7 @@
     "noUnusedLocals": true,
     "declarationMap": false,
     "sourceMap": false,
-    "noEmit": false,
+    "noEmit": true,
     "types": ["node", "vitest/globals"],
     "importHelpers": true
   },
