--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -9,11 +9,13 @@
     "start": "expo start -c"
   },
   "dependencies": {
+    "@config-plugins/android-jsc-intl": "^5.0.0",
     "@universal-labs/core": "workspace:*",
     "@universal-labs/primitives": "workspace:*",
     "expo": "^48.0.0",
     "expo-font": "11.1.1",
     "expo-status-bar": "~1.4.4",
+    "intl": "1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.71.6",
