feat(styles): custom parser config

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,6 +9,7 @@ logFilters:
     level: discard
 
 nodeLinker: node-modules
+enableInlineHunks: true
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
