--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "web": "npx nx dev start --project=next-app"
   },
   "dependencies": {
+    "@twind/core": "1.1.3",
     "@types/node": "16.11.7",
     "@types/postcss-js": "^4.0.0",
     "@types/react-test-renderer": "^18.0.0",
@@ -76,5 +77,8 @@
     "vite-plugin-dts": "^2.2.0",
     "vitest": "^0.28.3"
   },
-  "packageManager": "yarn@3.4.1"
+  "packageManager": "yarn@3.4.1",
+  "resolutions": {
+    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch"
+  }
 }
