--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,7 +7,8 @@
       "@universal-labs/core",
       "@universal-labs/styled",
       "@universal-labs/stylesheets",
-      "@universal-labs/primitives"
+      "@universal-labs/primitives",
+      "@universal-labs/twind-native"
     ]
   ],
   "access": "public",
