--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -9,21 +9,16 @@
     "start": "expo start -c"
   },
   "dependencies": {
-    "@react-navigation/drawer": "^6.6.0",
-    "@react-navigation/native": "^6.1.4",
-    "@react-navigation/native-stack": "^6.9.10",
+    "@config-plugins/android-jsc-intl": "^5.0.0",
     "@universal-labs/core": "workspace:*",
     "@universal-labs/primitives": "workspace:*",
     "expo": "^48.0.0",
     "expo-font": "11.1.1",
     "expo-status-bar": "~1.4.4",
+    "intl": "1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.71.6",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.10"
   },
