--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "@universal-labs/core",
+  "name": "@universal-labs/twind-native",
   "version": "1.11.0",
   "description": "Tailwindcss Inline StyleSheet generator for react native",
   "keywords": [
     "tailwind",
     "tailwindcss",
+    "twind",
+    "twind-native",
+    "twind-native-plugin",
+    "twind-plugin",
     "tailwind-plugin",
     "react-native-web",
     "universal-labs",
@@ -18,24 +22,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/react-universal/tailwind",
-    "directory": "packages/native-tailwind"
+    "directory": "packages/twind-native"
   },
-  "exports": {
-    ".": {
-      "import": "./build/index.mjs.js",
-      "require": "./build/index.js",
-      "browser": "./build/cdn.min.js",
-      "types": "./tailwind.d.ts"
-    },
-    "./tailwind/preset": {
-      "import": "./tailwind/preset.js",
-      "require": "./tailwind/preset.js"
-    }
-  },
-  "main": "./build/index.js",
-  "unpkg": "./build/cdn.min.js",
-  "module": "./build/index.mjs.js",
-  "types": "./tailwind.d.ts",
+  "main": "./src/index.ts",
   "files": [
     "build",
     "index.d.ts",
@@ -48,20 +37,13 @@
   ],
   "scripts": {
     "build:esbuild": "tsx src/build.ts",
-    "build:libs": "npx tsx src/build.ts && yarn build:tailwind",
     "build:tailwind": "npx vite build -c vite.tailwind.config.ts",
-    "dev": "concurrently \"npx tsx watch src/build.ts\" \"yarn build:tailwind -w\"",
-    "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "test": "vitest run",
-    "test:ui": "vitest --ui"
+    "lint": "eslint \"./**/*.{ts,tsx}\""
   },
   "devDependencies": {
-    "@types/css-tree": "2.3.1",
-    "@types/postcss-css-variables": "0.18.0",
-    "@types/tailwindcss": "3.1.0",
-    "css-tree": "2.3.1",
-    "postcss-css-variables": "^0.18.0",
-    "tailwindcss": "^3.2.4",
+    "@twind/core": "1.1.3",
+    "@twind/preset-tailwind": "1.1.4",
+    "css-to-react-native-transform": "2.0.0",
     "tsx": "3.12.6"
   },
   "publishConfig": {
