--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -50,6 +50,7 @@
     "css-to-react-native": "^3.1.0",
     "css-tree": "2.3.1",
     "immer": "9.0.21",
+    "postcss-calc": "8.2.4",
     "react-native-uuid": "^2.0.1",
     "use-sync-external-store": "^1.2.0"
   },
