--- a/nx.json
+++ b/nx.json
@@ -4,7 +4,7 @@
     "appsDir": "apps",
     "libsDir": "packages"
   },
-  "npmScope": "react-universal",
+  "npmScope": "universal-labs",
   "affected": {
     "defaultBase": "main"
   },
