--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "apps/*"
   ],
   "scripts": {
-    "build:libs": "npx nx run-many --target=build:libs --projects=\"@universal-labs/**\"",
+    "build:libs": "npx nx run-many --target=build:libs",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "dev": "npx nx run-many --target=dev --projects=\"@universal-labs/**\" --parallel",
+    "dev": "npx nx watch --all -- npx nx run build:libs",
     "docs:build": "npx nx run build --project=docusaurus",
     "docs:dev": "npx nx run dev --project=docusaurus",
     "expo:android": "yarn workspace expo-app run android",
@@ -29,6 +29,9 @@
     "test": "npx nx run-many --target=test --projects=\"@universal-labs/**\"",
     "test:e2e": "npx nx run-many --target=e2e --projects=\"@universal-labs/**\"",
     "web": "npx nx dev start --project=next-app"
+  },
+  "resolutions": {
+    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch"
   },
   "dependencies": {
     "@twind/core": "1.1.3",
@@ -77,8 +80,5 @@
     "vite-plugin-dts": "^2.2.0",
     "vitest": "^0.28.3"
   },
-  "packageManager": "yarn@3.4.1",
-  "resolutions": {
-    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch"
-  }
+  "packageManager": "yarn@3.4.1"
 }
