--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,9 +48,9 @@
   ],
   "scripts": {
     "build:esbuild": "tsx src/build.ts",
-    "build:libs": "npx tsx src/build.ts && yarn build:tailwind",
+    "build:libs:tailwind": "npx tsx src/build.ts && yarn build:tailwind",
     "build:tailwind": "npx vite build -c vite.tailwind.config.ts",
-    "dev": "concurrently \"npx tsx watch src/build.ts\" \"yarn build:tailwind -w\"",
+    "dev:tailwind": "concurrently \"npx tsx watch src/build.ts\" \"yarn build:tailwind -w\"",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "vitest run",
     "test:ui": "vitest --ui"
