--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -45,13 +45,9 @@
     "test": "vitest run",
     "test:ui": "vitest --ui"
   },
-  "devDependencies": {
+  "dependencies": {
     "@twind/core": "1.1.3",
-    "@twind/preset-tailwind": "1.1.4",
-    "@types/css-tree": "2.3.1",
-    "css-to-react-native-transform": "2.0.0",
-    "css-tree": "2.3.1",
-    "tsx": "3.12.6"
+    "@twind/preset-tailwind": "1.1.4"
   },
   "publishConfig": {
     "access": "public",
