--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "apps/*"
   ],
   "scripts": {
-    "build:libs": "npx nx run-many --target=build:libs --projects=\"@universal-labs/**\"",
+    "build:libs": "npx nx run-many --target=build:libs",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "dev": "npx nx run-many --target=dev --projects=\"@universal-labs/**\" --parallel",
+    "dev": "npx nx watch --all -- npx nx run build:libs",
     "docs:build": "npx nx run build --project=docusaurus",
     "docs:dev": "npx nx run dev --project=docusaurus",
     "expo:android": "yarn workspace expo-app run android",
@@ -24,36 +24,26 @@
     "expo:start": "yarn workspace expo-app run start",
     "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
     "libs:foreach": "yarn workspaces foreach --no-private --verbose",
-    "lint": "npx nx run-many --target=lint --projects=\"@universal-labs/**\"",
+    "lint": "npx nx run-many --target=lint",
     "release": "yarn build:release && changeset publish",
-    "test": "npx nx run-many --target=test --projects=\"@universal-labs/**\"",
-    "test:e2e": "npx nx run-many --target=e2e --projects=\"@universal-labs/**\"",
+    "test": "npx nx run-many --target=test",
     "web": "npx nx dev start --project=next-app"
   },
-  "dependencies": {
-    "@twind/core": "1.1.3",
-    "@types/node": "16.11.7",
-    "@types/postcss-js": "^4.0.0",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/tailwindcss": "3.1.0",
-    "happy-dom": "latest",
-    "jsdom": "latest",
-    "postcss": "8.4.21",
-    "postcss-color-rgb": "^2.0.0",
-    "postcss-js": "^4.0.0",
-    "react": "18.2.0",
-    "react-test-renderer": "^18.2.0",
-    "tailwindcss": "3.2.4"
+  "resolutions": {
+    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
     "@nrwl/devkit": "15.8.7",
     "@nrwl/eslint-plugin-nx": "15.8.7",
+    "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.8.7",
     "@nrwl/nx-cloud": "latest",
     "@rollup/plugin-terser": "^0.4.1",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/node": "16.11.7",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react-swc": "^3.2.0",
@@ -68,6 +58,8 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-module-scripts": "^3.0.7",
+    "happy-dom": "latest",
+    "jsdom": "latest",
     "nx": "15.8.7",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
@@ -77,8 +69,5 @@
     "vite-plugin-dts": "^2.2.0",
     "vitest": "^0.28.3"
   },
-  "packageManager": "yarn@3.4.1",
-  "resolutions": {
-    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch"
-  }
+  "packageManager": "yarn@3.4.1"
 }
