--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -24,7 +24,9 @@
     "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/twind-native"
   },
-  "main": "./src/index.ts",
+  "main": "./build/index.es.js",
+  "module": "./build/index.mjs.js",
+  "types": "./build/index.d.ts",
   "files": [
     "build",
     "index.d.ts",
@@ -36,15 +38,14 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "build:esbuild": "tsx src/build.ts",
-    "build:tailwind": "npx vite build -c vite.tailwind.config.ts",
-    "lint": "eslint \"./**/*.{ts,tsx}\""
+    "build:libs": "vite build",
+    "lint": "eslint \"./**/*.{ts,tsx}\"",
+    "test": "vitest run",
+    "test:ui": "vitest --ui"
   },
-  "devDependencies": {
+  "dependencies": {
     "@twind/core": "1.1.3",
-    "@twind/preset-tailwind": "1.1.4",
-    "css-to-react-native-transform": "2.0.0",
-    "tsx": "3.12.6"
+    "@twind/preset-tailwind": "1.1.4"
   },
   "publishConfig": {
     "access": "public",
