removing custom parsers post tw

--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -5,6 +5,7 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "declarationMap": false,
+    "jsx": "react-jsx",
     "outDir": "./build",
     "sourceMap": false,
     "noEmit": false,
