--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build:libs": "npx nx run-many --target=build:libs",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "dev": "npx nx watch --all -- npx nx run build:libs",
+    "dev": " nx watch --all -- nx run \\$NX_PROJECT_NAME:build:libs",
     "docs:build": "npx nx run build --project=docusaurus",
     "docs:dev": "npx nx run dev --project=docusaurus",
     "expo:android": "yarn workspace expo-app run android",
@@ -30,7 +30,9 @@
     "web": "npx nx dev start --project=next-app"
   },
   "resolutions": {
-    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch"
+    "@twind/core@1.1.3": "patch:@twind/core@npm%3A1.1.3#./.yarn/patches/@twind-core-npm-1.1.3-62b4eeba21.patch",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
