--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -48,10 +48,10 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "~18.0.10",
     "@types/react-is": "^17.0.3",
-    "@types/react-native": "^0.71.5",
-    "react": "18.2.0"
+    "@types/react-native": "^0.71.5"
   },
   "peerDependencies": {
+    "react": ">=18",
     "react-native-web": ">= 0.18.10"
   },
   "publishConfig": {
