--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -59,11 +59,11 @@
     "@types/react-dom": "~18.0.10",
     "@types/react-is": "^17.0.3",
     "@types/react-native": "^0.71.5",
-    "react": "18.2.0",
     "vite-plugin-multiple": "0.2.0",
     "vitest-react-native": "0.0.5"
   },
   "peerDependencies": {
+    "react": ">=18",
     "react-native": ">= 0.70",
     "react-native-web": ">= 0.18.10"
   },
