feat(groups): grouping sintax full support restored funtions

--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@twind/core": "1.1.3",
+    "@twind/intellisense": "1.1.3",
     "@twind/preset-tailwind": "1.1.4"
   },
   "publishConfig": {
