--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@config-plugins/android-jsc-intl": "^5.0.0",
-    "@universal-labs/core": "workspace:*",
     "@universal-labs/primitives": "workspace:*",
+    "@universal-labs/twind-native": "workspace:*",
     "expo": "^48.0.0",
     "expo-font": "11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -29,8 +29,6 @@
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "^0.71.5",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "babel-plugin-module-resolver": "^5.0.0"
   }
 }
