--- a/packages/twind-adapter/tsconfig.json
+++ b/packages/twind-adapter/tsconfig.json
@@ -1,12 +1,10 @@
 {
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "lib": ["dom", "ESNext","DOM.Iterable"],
-    "module": "ESNext",
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
-    "stripInternal": true,
-    "target": "ESNext"
+    "stripInternal": true
   }
 }
