--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -47,8 +47,7 @@
     "@types/node": "16.11.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "~18.0.10",
-    "@types/react-is": "^17.0.3",
-    "@types/react-native": "^0.71.5"
+    "@types/react-is": "^17.0.3"
   },
   "peerDependencies": {
     "react": ">=18",
