--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -9,26 +9,23 @@
     "start": "expo start -c"
   },
   "dependencies": {
-    "@config-plugins/android-jsc-intl": "^5.0.0",
     "@universal-labs/primitives": "workspace:*",
     "@universal-labs/twind-native": "workspace:*",
-    "expo": "^48.0.0",
-    "expo-font": "11.1.1",
+    "expo": "^48.0.15",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
-    "intl": "1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.71.6",
+    "react-native": "0.71.7",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "7.18.6",
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
-    "@types/react-native": "^0.71.5",
     "babel-plugin-module-resolver": "^5.0.0"
   }
 }
