--- a/packages/sheets/tsconfig.json
+++ b/packages/sheets/tsconfig.json
@@ -4,9 +4,9 @@
     "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "error",
     "declarationMap": false,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "emitDeclarationOnly": true,
-    "jsx": "react-jsx",
+    "resolveJsonModule": true,
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": false,
