feat(css): store fix

--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -51,13 +51,15 @@
     "@universal-labs/stylesheets": "workspace:*",
     "react-is": "^18.2.0",
     "stable-hash": "0.0.3",
-    "tailwind-merge": "^1.10.0"
+    "tailwind-merge": "^1.10.0",
+    "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "~18.0.10",
     "@types/react-is": "^17.0.3",
+    "@types/use-sync-external-store": "^0.0.3",
     "vite-plugin-multiple": "0.2.0",
     "vitest-react-native": "0.0.5"
   },
