fesat(sheets): fix tests

--- a/packages/twind-adapter/tsconfig.json
+++ b/packages/twind-adapter/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
