--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -48,6 +48,9 @@
     "@twind/intellisense": "1.1.3",
     "@twind/preset-tailwind": "1.1.4"
   },
+  "devDependencies": {
+    "vitest-react-native": "0.0.5"
+  },
   "publishConfig": {
     "access": "public",
     "directory": "_release/package"
