--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -60,8 +60,7 @@
     "@types/react-dom": "~18.0.10",
     "@types/react-is": "^17.0.3",
     "@types/use-sync-external-store": "^0.0.3",
-    "vite-plugin-multiple": "0.2.0",
-    "vitest-react-native": "0.0.5"
+    "vite-plugin-multiple": "0.2.0"
   },
   "peerDependencies": {
     "react": ">=18",
