--- a/packages/tailwind-postcss-adapter/package.json
+++ b/packages/tailwind-postcss-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@universal-labs/core",
+  "name": "@universal-labs/tailwind-postcss-adapter",
   "version": "3.0.4",
   "description": "Tailwindcss Inline StyleSheet generator for react native",
   "keywords": [
@@ -18,7 +18,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/react-universal/tailwind",
-    "directory": "packages/native-tailwind"
+    "directory": "packages/tailwind-postcss-adapter"
   },
   "exports": {
     ".": {
