docs(old-docs): remove custom docs page

--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -44,10 +44,8 @@
     "@universal-labs/styled": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "16.11.7",
     "@types/react": "18.0.28",
-    "@types/react-dom": "~18.0.10",
-    "@types/react-is": "^17.0.3"
+    "@types/react-dom": "~18.0.10"
   },
   "peerDependencies": {
     "react": ">=18",
