--- a/packages/sheets/tsconfig.json
+++ b/packages/sheets/tsconfig.json
@@ -2,12 +2,14 @@
   "extends": "../../tsconfig.base",
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "lib": ["ESNext"],
     "importsNotUsedAsValues": "error",
     "declarationMap": false,
     "noImplicitAny": true,
     "emitDeclarationOnly": true,
     "resolveJsonModule": true,
     "module": "esnext",
+    "types": ["node"],
     "moduleResolution": "node",
     "noEmit": false,
     "strict": true,
