--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -24,8 +24,8 @@
     "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/twind-adapter"
   },
-  "main": "./build/index.es.js",
-  "module": "./build/index.cjs.js",
+  "main": "./build/index.cjs.js",
+  "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
   "files": [
     "build",
