--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -40,6 +40,7 @@
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepublishOnly": "expo-module prepublishOnly",
     "test": "vitest run",
+    "test:bench": "vitest bench --ui",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
