--- a/examples/expo-app/app.json
+++ b/examples/expo-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo-app",
-    "slug": "expo-app",
+    "name": "universal-expo",
+    "slug": "universal-expo",
     "version": "1.0.0",
     "jsEngine": "jsc",
     "orientation": "portrait",
