--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -44,6 +44,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@adobe/css-tools": "4.3.0-beta.2",
     "@universal-labs/twind-adapter": "workspace:*",
     "css": "^3.0.0",
     "css-to-react-native": "^3.1.0",
