--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.0.6",
     "@universal-labs/primitives": "workspace:*",
+    "@universal-labs/twind-adapter": "workspace:*",
     "autoprefixer": "10.4.13",
     "critters": "^0.0.16",
     "next": "13.1.4",
