--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.0.6",
+    "@twind/with-next": "1.2.2",
     "@universal-labs/primitives": "workspace:*",
     "@universal-labs/twind-adapter": "workspace:*",
     "autoprefixer": "10.4.13",
