--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -49,6 +49,7 @@
   },
   "peerDependencies": {
     "react": ">=18",
+    "react-native": ">=0.70",
     "react-native-web": ">= 0.18.10"
   },
   "publishConfig": {
