--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -54,6 +54,11 @@
     "@types/react": "~18.0.27",
     "vitest": "^0.28.3"
   },
+  "peerDependencies": {
+    "react": ">=18",
+    "react-native": ">=0.70",
+    "react-native-web": ">= 0.18.10"
+  },
   "publishConfig": {
     "access": "public",
     "directory": "_release/package"
