--- a/packages/tailwind-postcss-adapter/package.json
+++ b/packages/tailwind-postcss-adapter/package.json
@@ -64,6 +64,11 @@
     "tailwindcss": "^3.2.4",
     "tsx": "3.12.6"
   },
+  "peerDependencies": {
+    "react": ">=18",
+    "react-native": ">=0.70",
+    "react-native-web": ">= 0.18.10"
+  },
   "publishConfig": {
     "access": "public",
     "directory": "_release/package"
