--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/twind-adapter"
   },
-  "main": "./src/index.ts",
+  "main": "./build/index.cjs.js",
   "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
   "files": [
